<resources>
    <string name="app_name">Scarne\'s Dice</string>
    <string name="player_message">Your score:</string>
    <string name="computer_message">Computer score:</string>
    <string name="roll_text">Roll</string>
    <string name="hold_text">Hold</string>
    <string name="reset_text">Reset</string>
    <string name="dice_content">The dice face</string>
    <string name="two_dice_desc_1">The first dice face</string>
    <string name="two_dice_desc_2">The second dice face</string>
    <string name="resume_button">Resume</string>
</resources>
